--- a/index.html
+++ b/index.html
@@ -6375,212 +6375,205 @@ async function loadQuarterlyReportData() {
     // ====================================================================
 
     class SecureConfigManager {
-        constructor() {
+    constructor() {
         this.configData = null;
-    this.tenantConfigData = null;
-    this.lastFetch = null;
-        }
-    async fetchPublicConfig() {
-            try {
-        console.log('Fetching public secure configuration from API...');
-    const response = await fetch(
-    `${FEDRAMP_API_CONFIG.BASE_URL}/config`, {
-        method: 'GET',
-    headers: {
-        'Content-Type': 'application/json'
-                        },
-    signal: AbortSignal.timeout(FEDRAMP_API_CONFIG.TIMEOUT)
-                    }
-    );
-    if (response.ok) {
-        this.configData = await response.text();
-    this.lastFetch = Date.now();
-    console.log('✅ Public secure configuration fetched successfully');
-    return this.configData;
-                } else {
-        console.error('Config API error:', response.status);
-    throw new Error('Failed to fetch configuration');
-                }
-            } catch (error) {
-        console.error('Error fetching public configuration:', error);
-    throw error;
-            }
-        }
-    async fetchTenantConfig() {
-            const token = localStorage.getItem(FEDRAMP_API_CONFIG.TOKEN_KEY);
-    if (!token) {
-                throw new Error('Authentication required for tenant-specific configuration');
-            }
-    try {
-        console.log('Fetching tenant-specific configuration from API...');
-    const response = await fetch(
-    `${FEDRAMP_API_CONFIG.BASE_URL}/config/tenant`, {
-        method: 'GET',
-    headers: {
-        'Content-Type': 'application/json',
-    'Authorization': `Bearer ${token}`
-                        },
-    signal: AbortSignal.timeout(FEDRAMP_API_CONFIG.TIMEOUT)
-                    }
-    );
-    if (response.ok) {
-        this.tenantConfigData = await response.text();
-    console.log('✅ Tenant-specific configuration fetched successfully');
-    return this.tenantConfigData;
-                } else {
-        console.error('Tenant config API error:', response.status);
-    throw new Error('Failed to fetch tenant configuration');
-                }
-            } catch (error) {
-        console.error('Error fetching tenant configuration:', error);
-    throw error;
-            }
-        }
-    async downloadConfig(isPublic = true) {
-            try {
-        showLoadingMessage('Preparing configuration download...');
-    const markdown = isPublic ?
-    (this.configData || await this.fetchPublicConfig()) :
-    (this.tenantConfigData || await this.fetchTenantConfig());
-    const blob = new Blob([markdown], {
-        type: 'text/markdown'
-                });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url;
-    const filename = isPublic ?
-    `fedramp-20x-secure-configuration-${new Date().toISOString().split('T')[0]}.md` :
-    `fedramp-20x-tenant-configuration-${new Date().toISOString().split('T')[0]}.md`;
-    a.download = filename;
-    document.body.appendChild(a);
-    a.click();
-                setTimeout(() => {
-        document.body.removeChild(a);
-    URL.revokeObjectURL(url);
-                }, 100);
-    showSuccessMessage('✅ Configuration file downloaded successfully');
-    logAgencyAccess(isPublic ? 'public_config_download' : 'tenant_config_download');
-            } catch (error) {
-        console.error('Download error:', error);
-    showErrorMessage('Failed to download configuration. Please try again.');
-            } finally {
-        hideLoadingMessage();
-            }
-        }
-    async viewConfigInBrowser(isPublic = true) {
-            try {
-        showLoadingMessage('Loading secure configuration...');
-    const markdown = isPublic ?
-    (this.configData || await this.fetchPublicConfig()) :
-    (this.tenantConfigData || await this.fetchTenantConfig());
-    // Load marked.js if not already loaded
-    if (typeof marked === 'undefined') {
-        await this.loadMarkedLibrary();
-                }
-    // Configure marked options
-    marked.setOptions({
-        breaks: true,
-    gfm: true,
-    headerIds: true,
-    mangle: false
-                });
-    // Convert markdown to HTML
-    const htmlContent = marked.parse(markdown);
-    // Show in modal
-    this.displayConfigModal(htmlContent, isPublic);
-    logAgencyAccess(isPublic ? 'public_config_view' : 'tenant_config_view');
-            } catch (error) {
-        console.error('View error:', error);
-    showErrorMessage('Failed to load configuration. Please try again.');
-            } finally {
-        hideLoadingMessage();
-            }
-        }
-    async loadMarkedLibrary() {
-            return new Promise((resolve, reject) => {
-                if (typeof marked !== 'undefined') {
-        resolve();
-    return;
-                }
-    const script = document.createElement('script');
-    script.src = 'https://cdn.jsdelivr.net/npm/marked/marked.min.js';
-    script.onload = resolve;
-    script.onerror = reject;
-    document.head.appendChild(script);
-            });
-        }
-        
-    displayConfigModal(htmlContent, isPublic) {
-    let modal = document.getElementById('config-viewer-modal');
-    if (!modal) {
-        modal = document.createElement('div');
-        modal.id = 'config-viewer-modal';
-        modal.className = 'modal';
-        document.body.appendChild(modal);
+        this.tenantConfigData = null;
+        this.lastFetch = null;
     }
-    const title = isPublic ?
-        '📄 FedRAMP 20x Secure Configuration Standards' :
-        '📄 Tenant-Specific Secure Configuration';
+    async fetchPublicConfig() {
+        try {
+            console.log('Fetching public secure configuration from API...');
+            const response = await fetch(
+                `${FEDRAMP_API_CONFIG.BASE_URL}/config`, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    signal: AbortSignal.timeout(FEDRAMP_API_CONFIG.TIMEOUT)
+                }
+            );
+            if (response.ok) {
+                this.configData = await response.text();
+                this.lastFetch = Date.now();
+                console.log('✅ Public secure configuration fetched successfully');
+                return this.configData;
+            } else {
+                console.error('Config API error:', response.status);
+                throw new Error('Failed to fetch configuration');
+            }
+        } catch (error) {
+            console.error('Error fetching public configuration:', error);
+            throw error;
+        }
+    }
+    async fetchTenantConfig() {
+        const token = localStorage.getItem(FEDRAMP_API_CONFIG.TOKEN_KEY);
+        if (!token) {
+            throw new Error('Authentication required for tenant-specific configuration');
+        }
+        try {
+            console.log('Fetching tenant-specific configuration from API...');
+            const response = await fetch(
+                `${FEDRAMP_API_CONFIG.BASE_URL}/config/tenant`, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    },
+                    signal: AbortSignal.timeout(FEDRAMP_API_CONFIG.TIMEOUT)
+                }
+            );
+            if (response.ok) {
+                this.tenantConfigData = await response.text();
+                console.log('✅ Tenant-specific configuration fetched successfully');
+                return this.tenantConfigData;
+            } else {
+                console.error('Tenant config API error:', response.status);
+                throw new Error('Failed to fetch tenant configuration');
+            }
+        } catch (error) {
+            console.error('Error fetching tenant configuration:', error);
+            throw error;
+        }
+    }
+    async downloadConfig(isPublic = true) {
+        try {
+            showLoadingMessage('Preparing configuration download...');
+            const markdown = isPublic ?
+                (this.configData || await this.fetchPublicConfig()) :
+                (this.tenantConfigData || await this.fetchTenantConfig());
+            const blob = new Blob([markdown], {
+                type: 'text/markdown'
+            });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            const filename = isPublic ?
+                `fedramp-20x-secure-configuration-${new Date().toISOString().split('T')[0]}.md` :
+                `fedramp-20x-tenant-configuration-${new Date().toISOString().split('T')[0]}.md`;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            setTimeout(() => {
+                document.body.removeChild(a);
+                URL.revokeObjectURL(url);
+            }, 100);
+            showSuccessMessage('✅ Configuration file downloaded successfully');
+            logAgencyAccess(isPublic ? 'public_config_download' : 'tenant_config_download');
+        } catch (error) {
+            console.error('Download error:', error);
+            showErrorMessage('Failed to download configuration. Please try again.');
+        } finally {
+            hideLoadingMessage();
+        }
+    }
+    async viewConfigInBrowser(isPublic = true) {
+        try {
+            showLoadingMessage('Loading secure configuration...');
+            const markdown = isPublic ?
+                (this.configData || await this.fetchPublicConfig()) :
+                (this.tenantConfigData || await this.fetchTenantConfig());
+            if (typeof marked === 'undefined') {
+                await this.loadMarkedLibrary();
+            }
+            marked.setOptions({
+                breaks: true,
+                gfm: true,
+                headerIds: true,
+                mangle: false
+            });
+            const htmlContent = marked.parse(markdown);
+            this.displayConfigModal(htmlContent, isPublic);
+            logAgencyAccess(isPublic ? 'public_config_view' : 'tenant_config_view');
+        } catch (error) {
+            console.error('View error:', error);
+            showErrorMessage('Failed to load configuration. Please try again.');
+        } finally {
+            hideLoadingMessage();
+        }
+    }
+    async loadMarkedLibrary() {
+        return new Promise((resolve, reject) => {
+            if (typeof marked !== 'undefined') {
+                resolve();
+                return;
+            }
+            const script = document.createElement('script');
+            script.src = 'https://cdn.jsdelivr.net/npm/marked/marked.min.js';
+            script.onload = resolve;
+            script.onerror = reject;
+            document.head.appendChild(script);
+        });
+    }
 
-    // Temporarily store the content so the new window function can access it
-    window.tempConfigContent = { html: htmlContent, title: title };
+    displayConfigModal(htmlContent, isPublic) {
+        let modal = document.getElementById('config-viewer-modal');
+        if (!modal) {
+            modal = document.createElement('div');
+            modal.id = 'config-viewer-modal';
+            modal.className = 'modal';
+            document.body.appendChild(modal);
+        }
+        const title = isPublic ?
+            '📄 FedRAMP 20x Secure Configuration Standards' :
+            '📄 Tenant-Specific Secure Configuration';
 
-    modal.innerHTML = `
-    <div class="modal-content config-modal-content" style="max-width: 90vw; max-height: 90vh;">
-        <div class="modal-header">
-            <h3>${title}</h3>
-            <div style="display: flex; gap: 0.5rem; align-items: center;">
-                <button onclick="window.configManager.downloadConfig(${isPublic})" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
-                    ⬇️ Download
-                </button>
-                <button onclick="openConfigInNewWindow()" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
-                    ↗️ Open in New Window
-                </button>
-                <button class="close-btn" onclick="closeCustomModal('config-viewer-modal')">&times;</button>
+        window.tempConfigContent = { html: htmlContent, title: title };
+
+        modal.innerHTML = `
+        <div class="modal-content config-modal-content" style="max-width: 90vw; max-height: 90vh;">
+            <div class="modal-header">
+                <h3>${title}</h3>
+                <div style="display: flex; gap: 0.5rem; align-items: center;">
+                    <button onclick="window.configManager.downloadConfig(${isPublic})" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+                        ⬇️ Download
+                    </button>
+                    <button onclick="window.configManager.openConfigInNewWindow()" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+                        ↗️ Open in New Window
+                    </button>
+                    <button class="close-btn" onclick="closeCustomModal('config-viewer-modal')">&times;</button>
+                </div>
+            </div>
+            <div class="modal-body markdown-content">
+                ${htmlContent}
             </div>
         </div>
-        <div class="modal-body markdown-content">
-            ${htmlContent}
-        </div>
-    </div>
-    `;
-    modal.classList.add('active');
-    document.body.style.overflow = 'hidden';
-}
+        `;
+        modal.classList.add('active');
+        document.body.style.overflow = 'hidden';
+    }
 
-/**
- * New helper function right after the displayConfigModal function.
- */
-function openConfigInNewWindow() {
-    if (window.tempConfigContent) {
-        const { html, title } = window.tempConfigContent;
-        const newWindow = window.open("", "_blank");
+    // ✅ CORRECT: No "function" keyword, making it a valid class method.
+    openConfigInNewWindow() {
+        if (window.tempConfigContent) {
+            const { html, title } = window.tempConfigContent;
+            const newWindow = window.open("", "_blank");
 
-        // Write the full HTML document, including styles, to the new tab
-        newWindow.document.write(`
-            <html>
-                <head>
-                    <title>${title}</title>
-                    <style>
-                        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; padding: 2rem; margin: 0; }
-                        .markdown-content { max-width: 800px; margin: auto; }
-                        h1, h2, h3 { border-bottom: 1px solid #eaecef; padding-bottom: 0.3em; }
-                        code { background-color: #f6f8fa; padding: 0.2em 0.4em; margin: 0; font-size: 85%; border-radius: 6px; }
-                        pre { background-color: #f6f8fa; padding: 16px; overflow: auto; line-height: 1.45; border-radius: 6px; }
-                        table { border-collapse: collapse; margin-top: 1rem; margin-bottom: 1rem; }
-                        th, td { border: 1px solid #dfe2e5; padding: 8px 15px; }
-                        th { font-weight: 600; }
-                        a { color: #0366d6; text-decoration: none; }
-                        a:hover { text-decoration: underline; }
-                    </style>
-                </head>
-                <body>
-                    <div class="markdown-content">${html}</div>
-                </body>
-            </html>
-        `);
-        newWindow.document.close();
-        closeCustomModal('config-viewer-modal'); // Close the modal after opening the new tab
+            newWindow.document.write(`
+                <html>
+                    <head>
+                        <title>${title}</title>
+                        <style>
+                            body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; padding: 2rem; margin: 0; }
+                            .markdown-content { max-width: 800px; margin: auto; }
+                            h1, h2, h3 { border-bottom: 1px solid #eaecef; padding-bottom: 0.3em; }
+                            code { background-color: #f6f8fa; padding: 0.2em 0.4em; margin: 0; font-size: 85%; border-radius: 6px; }
+                            pre { background-color: #f6f8fa; padding: 16px; overflow: auto; line-height: 1.45; border-radius: 6px; }
+                            table { border-collapse: collapse; margin-top: 1rem; margin-bottom: 1rem; }
+                            th, td { border: 1px solid #dfe2e5; padding: 8px 15px; }
+                            th { font-weight: 600; }
+                            a { color: #0366d6; text-decoration: none; }
+                            a:hover { text-decoration: underline; }
+                        </style>
+                    </head>
+                    <body>
+                        <div class="markdown-content">${html}</div>
+                    </body>
+                </html>
+            `);
+            newWindow.document.close();
+            closeCustomModal('config-viewer-modal');
+        }
     }
 }
 
@@ -6634,7 +6627,7 @@ function openConfigInNewWindow() {
 
     static sanitizeCategory(c) { 
             const categoryMap = {
-        'Identity and Access Management': 'Authentication & Access',
+    'Identity and Access Management': 'Authentication & Access',
     'Cloud Native Architecture': 'Infrastructure Security',
     'Service Configuration': 'Configuration Management',
     'Monitoring, Logging, Auditing': 'Security Monitoring',
