--- a/index.html
+++ b/index.html
@@ -6543,7 +6543,7 @@ async function loadQuarterlyReportData() {
         document.body.style.overflow = 'hidden';
     }
 
-    
+    // ✅ CORRECT: No "function" keyword, making it a valid class method.
     openConfigInNewWindow() {
         if (window.tempConfigContent) {
             const { html, title } = window.tempConfigContent;
@@ -6576,190 +6576,6 @@ async function loadQuarterlyReportData() {
         }
     }
 }
-
-
-    // ADDED NEW METHODS INSIDE the SecureConfigManager class 
-
-    /**
-     * Fetches and displays the latest quarterly report (MD and JSON).
-     */
-    async fetchAndDisplayQuarterlyReport() {
-        // --- Configuration: Ideally get this from an API or config ---
-        const reportBaseName = 'ongoing_authorization_report_Q4_2025'; // Hardcoded for now
-        const reportPath = 'quarterly_reports/'; // Relative path
-        const mdFilename = `${reportBaseName}.md`;
-        const jsonFilename = `${reportBaseName}.json`;
-        // --- End Configuration ---
-
-        showLoadingMessage('Loading quarterly report...');
-        try {
-            // Fetch both files concurrently
-            const [mdResponse, jsonResponse] = await Promise.all([
-                fetch(reportPath + mdFilename),
-                fetch(reportPath + jsonFilename)
-            ]);
-
-            if (!mdResponse.ok) {
-                throw new Error(`Failed to load Markdown report (${mdResponse.status}): ${mdFilename}`);
-            }
-            if (!jsonResponse.ok) {
-                throw new Error(`Failed to load JSON report (${jsonResponse.status}): ${jsonFilename}`);
-            }
-
-            const markdownContent = await mdResponse.text();
-            const jsonContent = await jsonResponse.text(); // Keep as text for download
-
-            // Load marked.js if needed
-            if (typeof marked === 'undefined') {
-                await this.loadMarkedLibrary();
-            }
-            marked.setOptions({ breaks: true, gfm: true, headerIds: true, mangle: false });
-            const htmlContent = marked.parse(markdownContent);
-
-            // Store content temporarily for modal actions
-            window.tempQuarterlyReportContent = {
-                html: htmlContent,
-                markdown: markdownContent,
-                json: jsonContent,
-                mdFilename: mdFilename,
-                jsonFilename: jsonFilename,
-                title: `Quarterly Report: ${reportBaseName}`
-            };
-
-            this.displayQuarterlyReportModal(htmlContent);
-
-        } catch (error) {
-            console.error('Error fetching quarterly report:', error);
-            showErrorMessage(`Failed to load quarterly report: ${error.message}`);
-        } finally {
-            hideLoadingMessage();
-        }
-    }
-
-    /**
-     * Displays the quarterly report content in a modal.
-     */
-    displayQuarterlyReportModal(htmlContent) {
-        let modal = document.getElementById('quarterly-report-modal');
-        if (!modal) {
-            modal = document.createElement('div');
-            modal.id = 'quarterly-report-modal';
-            modal.className = 'modal';
-            document.body.appendChild(modal);
-        }
-
-        const { title } = window.tempQuarterlyReportContent || { title: 'Quarterly Report Viewer' };
-
-        modal.innerHTML = `
-        <div class="modal-content config-modal-content" style="max-width: 90vw; max-height: 90vh;">
-            <div class="modal-header">
-                <h3>${title}</h3>
-                <div style="display: flex; gap: 0.5rem; align-items: center; flex-wrap: wrap;">
-                    <button onclick="window.configManager.openQuarterlyReportInNewWindow()" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
-                        ↗️ Open MD in New Window
-                    </button>
-                     <button onclick="window.configManager.downloadQuarterlyReportFile('markdown')" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
-                        ⬇️ Download MD
-                    </button>
-                    <button onclick="window.configManager.downloadQuarterlyReportFile('json')" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
-                        ⬇️ Download JSON
-                    </button>
-                    <button class="close-btn" onclick="closeCustomModal('quarterly-report-modal')">&times;</button>
-                </div>
-            </div>
-            <div class="modal-body markdown-content">
-                ${htmlContent}
-            </div>
-        </div>
-        `;
-        modal.classList.add('active');
-        document.body.style.overflow = 'hidden';
-    }
-
-    /**
-     * Opens the Markdown report in a new browser window/tab.
-     */
-    openQuarterlyReportInNewWindow() {
-        if (window.tempQuarterlyReportContent) {
-            const { html, title } = window.tempQuarterlyReportContent;
-            const newWindow = window.open("", "_blank");
-            newWindow.document.write(`
-                <html>
-                    <head>
-                        <title>${title}</title>
-                        <style>
-                            /* Reusing styles from openConfigInNewWindow */
-                            body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; padding: 2rem; margin: 0; }
-                            .markdown-content { max-width: 800px; margin: auto; }
-                            h1, h2, h3 { border-bottom: 1px solid #eaecef; padding-bottom: 0.3em; }
-                            code { background-color: #f6f8fa; padding: 0.2em 0.4em; margin: 0; font-size: 85%; border-radius: 6px; }
-                            pre { background-color: #f6f8fa; padding: 16px; overflow: auto; line-height: 1.45; border-radius: 6px; }
-                            table { border-collapse: collapse; margin-top: 1rem; margin-bottom: 1rem; }
-                            th, td { border: 1px solid #dfe2e5; padding: 8px 15px; }
-                            th { font-weight: 600; }
-                            a { color: #0366d6; text-decoration: none; }
-                            a:hover { text-decoration: underline; }
-                        </style>
-                    </head>
-                    <body>
-                        <div class="markdown-content">${html}</div>
-                    </body>
-                </html>
-            `);
-            newWindow.document.close();
-            closeCustomModal('quarterly-report-modal'); // Close modal after opening
-        } else {
-             showErrorMessage('Report content not found to open in new window.');
-        }
-    }
-
-    /**
-     * Triggers download for the specified report file type (markdown or json).
-     */
-    downloadQuarterlyReportFile(fileType) {
-        if (!window.tempQuarterlyReportContent) {
-            showErrorMessage('Report content not found for download.');
-            return;
-        }
-
-        const { markdown, json, mdFilename, jsonFilename } = window.tempQuarterlyReportContent;
-        let content, filename, mimeType;
-
-        if (fileType === 'markdown') {
-            content = markdown;
-            filename = mdFilename;
-            mimeType = 'text/markdown;charset=utf-8';
-            logAgencyAccess('quarterly_report_download_md', filename);
-        } else if (fileType === 'json') {
-            content = json; // Use the raw JSON text
-            filename = jsonFilename;
-            mimeType = 'application/json;charset=utf-8';
-             logAgencyAccess('quarterly_report_download_json', filename);
-        } else {
-            showErrorMessage('Invalid file type requested for download.');
-            return;
-        }
-
-        try {
-            const blob = new Blob([content], { type: mimeType });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = filename;
-            document.body.appendChild(a);
-            a.click();
-
-            setTimeout(() => {
-                document.body.removeChild(a);
-                URL.revokeObjectURL(url);
-                 showSuccessMessage(`✅ Started downloading ${filename}`);
-            }, 100);
-
-        } catch (error) {
-            console.error(`Error downloading ${fileType} report:`, error);
-            showErrorMessage(`Failed to initiate download for ${filename}.`);
-        }
-    }
 
     // Public config access (no authentication required)
     async function viewPublicSecureConfiguration() {
@@ -8099,20 +7915,15 @@ async function loadQuarterlyReportData() {
     alert('Opening risk management dashboard... (This would show detailed POA&M and risk data in production)');
     }
 
-    async function viewQuarterlyReports() {
-    logAgencyAccess('quarterly_reports_access');
-    if (!window.fedRAMPAuth.isAuthenticated) {
-        showAccessRequiredModal('Quarterly Authorization Reports', [
-            'Access detailed RFC-0016 compliance reports',
-            'Review continuous monitoring status updates',
-            'Download reports in Markdown and JSON formats',
-            'Track compliance trends over time'
-        ]);
-    } else {
-        // If authenticated, call the new method on configManager
-        await window.configManager.fetchAndDisplayQuarterlyReport();
+    function viewQuarterlyReports() {
+        logAgencyAccess('quarterly_reports_access');
+    // In production, this would navigate to or display quarterly reports
+    if (window.originalViewQuarterlyReports) {
+        window.originalViewQuarterlyReports();
+        } else {
+        alert('Opening quarterly reports dashboard... (This would display RFC-0016 reports in production)');
+        }
     }
-}
 
     function exportValidationData() {
         logAgencyAccess('validation_data_export');
